tests/fixtures/invalid/max_float_dict.py
# Cannot call max() with Float, Dict[str, int]
x = max(1.0, {"a": 1})
